Matching on position 0 is okay too, only negative values mean no match.

BUG: 93756

svn path=/trunk/kdepim/; revision=391431